--- a/Depoza/Base.lproj/Main.storyboard
+++ b/Depoza/Base.lproj/Main.storyboard
@@ -133,10 +133,10 @@
                                             <constraints>
                                                 <constraint firstItem="son-R0-NKv" firstAttribute="top" secondItem="PiI-ED-hPV" secondAttribute="top" constant="6" id="CCB-i5-vVK"/>
                                                 <constraint firstAttribute="centerY" secondItem="O0c-N4-amn" secondAttribute="centerY" id="DbA-xq-ude"/>
-                                                <constraint firstItem="O0c-N4-amn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DDT-yv-n1E" secondAttribute="trailing" constant="8" symbolic="YES" id="PVQ-aM-EE1"/>
+                                                <constraint firstItem="O0c-N4-amn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DDT-yv-n1E" secondAttribute="trailing" id="PVQ-aM-EE1"/>
                                                 <constraint firstAttribute="bottom" secondItem="DDT-yv-n1E" secondAttribute="bottom" constant="10" id="YbP-mW-cs7"/>
                                                 <constraint firstAttribute="centerY" secondItem="KBt-h0-rbQ" secondAttribute="centerY" id="aSY-XL-JM1"/>
-                                                <constraint firstItem="O0c-N4-amn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="son-R0-NKv" secondAttribute="trailing" constant="8" symbolic="YES" id="j9E-jD-AkG"/>
+                                                <constraint firstItem="O0c-N4-amn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="son-R0-NKv" secondAttribute="trailing" id="j9E-jD-AkG"/>
                                                 <constraint firstItem="DDT-yv-n1E" firstAttribute="leading" secondItem="KBt-h0-rbQ" secondAttribute="trailing" constant="8" id="lyo-6G-J20"/>
                                                 <constraint firstItem="son-R0-NKv" firstAttribute="leading" secondItem="KBt-h0-rbQ" secondAttribute="trailing" constant="8" id="v7C-gd-Nyx"/>
                                                 <constraint firstItem="KBt-h0-rbQ" firstAttribute="leading" secondItem="PiI-ED-hPV" secondAttribute="leading" constant="15" id="xMA-3V-KPB"/>
@@ -1090,57 +1090,47 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SelectedCell" rowHeight="54" id="c8P-ap-GkC" customClass="MainViewCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SelectedCell" id="c8P-ap-GkC" customClass="SelectedCategoryCell">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="c8P-ap-GkC" id="x2k-Nr-jZs">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Beach" translatesAutoresizingMaskIntoConstraints="NO" id="CEi-wc-ce7">
-                                            <rect key="frame" x="15" y="6" width="42" height="42"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="42" id="KNJ-oh-mNu"/>
-                                                <constraint firstAttribute="height" constant="42" id="TZt-yL-5uj"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="Category" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Idp-Cy-5dW">
-                                            <rect key="frame" x="65" y="6" width="71" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="descriptionExpense" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WDI-1N-8eL">
+                                            <rect key="frame" x="15" y="17" width="144" height="20"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" text="$25.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QPJ-Qn-JVR">
-                                            <rect key="frame" x="259" y="16" width="53" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="Amount" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jN8-UA-sp2">
+                                            <rect key="frame" x="15" y="37" width="57" height="16"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="250" text="Description" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5FM-nT-IRe">
-                                            <rect key="frame" x="65" y="26" width="74" height="17"/>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" text="Date" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jGb-u9-8Qt">
+                                            <rect key="frame" x="253" y="17" width="34" height="20"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="centerY" secondItem="QPJ-Qn-JVR" secondAttribute="centerY" id="1lk-1B-E71"/>
-                                        <constraint firstItem="Idp-Cy-5dW" firstAttribute="top" secondItem="x2k-Nr-jZs" secondAttribute="top" constant="6" id="2Ud-MT-QUy"/>
-                                        <constraint firstItem="CEi-wc-ce7" firstAttribute="leading" secondItem="x2k-Nr-jZs" secondAttribute="leading" constant="15" id="5ji-zC-ms3"/>
-                                        <constraint firstItem="5FM-nT-IRe" firstAttribute="leading" secondItem="CEi-wc-ce7" secondAttribute="trailing" constant="8" id="7mf-Ue-Scd"/>
-                                        <constraint firstAttribute="centerY" secondItem="CEi-wc-ce7" secondAttribute="centerY" id="SKv-5R-F7A"/>
-                                        <constraint firstItem="Idp-Cy-5dW" firstAttribute="leading" secondItem="CEi-wc-ce7" secondAttribute="trailing" constant="8" id="TFv-HG-aZN"/>
-                                        <constraint firstAttribute="bottom" secondItem="5FM-nT-IRe" secondAttribute="bottom" constant="10" id="WoM-2h-JzX"/>
-                                        <constraint firstItem="QPJ-Qn-JVR" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Idp-Cy-5dW" secondAttribute="trailing" constant="8" symbolic="YES" id="fzJ-Io-fst"/>
-                                        <constraint firstItem="QPJ-Qn-JVR" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="5FM-nT-IRe" secondAttribute="trailing" constant="8" symbolic="YES" id="hor-di-YdT"/>
-                                        <constraint firstAttribute="trailing" secondItem="QPJ-Qn-JVR" secondAttribute="trailing" constant="8" id="xz1-8u-ElW"/>
+                                        <constraint firstAttribute="trailing" secondItem="jGb-u9-8Qt" secondAttribute="trailing" id="3H6-m0-fX0"/>
+                                        <constraint firstItem="jGb-u9-8Qt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="jN8-UA-sp2" secondAttribute="trailing" id="3Vq-Kf-0uh"/>
+                                        <constraint firstItem="WDI-1N-8eL" firstAttribute="leading" secondItem="x2k-Nr-jZs" secondAttribute="leading" constant="15" id="40E-qh-lbt"/>
+                                        <constraint firstItem="jN8-UA-sp2" firstAttribute="top" secondItem="WDI-1N-8eL" secondAttribute="bottom" id="5Vj-hj-p9D"/>
+                                        <constraint firstAttribute="centerY" secondItem="jGb-u9-8Qt" secondAttribute="centerY" id="68v-bW-YE3"/>
+                                        <constraint firstAttribute="bottom" secondItem="jN8-UA-sp2" secondAttribute="bottom" id="LcI-HY-HBc"/>
+                                        <constraint firstItem="jGb-u9-8Qt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="WDI-1N-8eL" secondAttribute="trailing" id="O2t-6I-kZ6"/>
+                                        <constraint firstAttribute="centerY" secondItem="WDI-1N-8eL" secondAttribute="centerY" id="Om7-Mr-5dh"/>
+                                        <constraint firstItem="jN8-UA-sp2" firstAttribute="leading" secondItem="x2k-Nr-jZs" secondAttribute="leading" constant="15" id="diN-QQ-pho"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="amountLabel" destination="QPJ-Qn-JVR" id="Wi3-S1-TwO"/>
-                                    <outlet property="categoryIcon" destination="CEi-wc-ce7" id="dBi-vT-4MG"/>
-                                    <outlet property="categoryLabel" destination="Idp-Cy-5dW" id="vN3-U5-E3t"/>
-                                    <outlet property="categoryLabelTopSpaceConstraint" destination="2Ud-MT-QUy" id="gch-x6-BpF"/>
-                                    <outlet property="descriptionLabel" destination="5FM-nT-IRe" id="nKK-Ha-WnC"/>
+                                    <outlet property="leftLabel" destination="WDI-1N-8eL" id="fUk-cV-158"/>
+                                    <outlet property="rightDetailLabel" destination="jGb-u9-8Qt" id="bSg-3a-0ew"/>
+                                    <outlet property="subtitleLabel" destination="jN8-UA-sp2" id="O52-bf-lbK"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
