--- a/Depoza/Base.lproj/Main.storyboard
+++ b/Depoza/Base.lproj/Main.storyboard
@@ -1085,46 +1085,47 @@
         <scene sceneID="TYm-fA-R9y">
             <objects>
                 <tableViewController id="OhM-zH-INc" customClass="SelectedCategoryTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="54" sectionHeaderHeight="22" sectionFooterHeight="22" id="sEb-8t-xKX">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="sEb-8t-xKX">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SelectedCell" id="c8P-ap-GkC" customClass="SelectedCategoryCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SelectedCell" id="c8P-ap-GkC" customClass="SelectedCategoryCell">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="c8P-ap-GkC" id="x2k-Nr-jZs">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="descriptionExpense" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WDI-1N-8eL">
-                                            <rect key="frame" x="15" y="17" width="144" height="20"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" text="descriptionExpense" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WDI-1N-8eL">
+                                            <rect key="frame" x="15" y="4" width="144" height="20"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="Amount" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jN8-UA-sp2">
-                                            <rect key="frame" x="15" y="37" width="57" height="16"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" text="Date" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jGb-u9-8Qt">
-                                            <rect key="frame" x="253" y="17" width="34" height="20"/>
+                                            <rect key="frame" x="266" y="4" width="34" height="20"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" text="Amount" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jN8-UA-sp2">
+                                            <rect key="frame" x="15" y="24" width="57" height="19"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="jGb-u9-8Qt" secondAttribute="trailing" id="3H6-m0-fX0"/>
+                                        <constraint firstAttribute="bottom" secondItem="jGb-u9-8Qt" secondAttribute="bottom" constant="19" id="3Db-N0-WlW"/>
+                                        <constraint firstAttribute="trailing" secondItem="jGb-u9-8Qt" secondAttribute="trailing" constant="20" symbolic="YES" id="3H6-m0-fX0"/>
                                         <constraint firstItem="jGb-u9-8Qt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="jN8-UA-sp2" secondAttribute="trailing" id="3Vq-Kf-0uh"/>
                                         <constraint firstItem="WDI-1N-8eL" firstAttribute="leading" secondItem="x2k-Nr-jZs" secondAttribute="leading" constant="15" id="40E-qh-lbt"/>
                                         <constraint firstItem="jN8-UA-sp2" firstAttribute="top" secondItem="WDI-1N-8eL" secondAttribute="bottom" id="5Vj-hj-p9D"/>
-                                        <constraint firstAttribute="centerY" secondItem="jGb-u9-8Qt" secondAttribute="centerY" id="68v-bW-YE3"/>
-                                        <constraint firstAttribute="bottom" secondItem="jN8-UA-sp2" secondAttribute="bottom" id="LcI-HY-HBc"/>
+                                        <constraint firstAttribute="bottom" secondItem="jN8-UA-sp2" secondAttribute="bottom" id="LhM-0o-9LF"/>
                                         <constraint firstItem="jGb-u9-8Qt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="WDI-1N-8eL" secondAttribute="trailing" id="O2t-6I-kZ6"/>
-                                        <constraint firstAttribute="centerY" secondItem="WDI-1N-8eL" secondAttribute="centerY" id="Om7-Mr-5dh"/>
+                                        <constraint firstItem="jGb-u9-8Qt" firstAttribute="top" secondItem="x2k-Nr-jZs" secondAttribute="top" constant="4" id="Pw3-6r-yoU"/>
                                         <constraint firstItem="jN8-UA-sp2" firstAttribute="leading" secondItem="x2k-Nr-jZs" secondAttribute="leading" constant="15" id="diN-QQ-pho"/>
+                                        <constraint firstItem="WDI-1N-8eL" firstAttribute="top" secondItem="x2k-Nr-jZs" secondAttribute="top" constant="4" id="urs-jj-0a7"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
