--- a/Depoza/Base.lproj/Main.storyboard
+++ b/Depoza/Base.lproj/Main.storyboard
@@ -13,27 +13,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="AllCell" editingAccessoryType="detailButton" textLabel="fca-gq-MZn" detailTextLabel="K30-0d-X5N" style="IBUITableViewCellStyleValue1" id="IoL-Ki-fam" userLabel="Cell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="AllCell" id="LZC-jO-brR" customClass="CustomRightDetailLabel">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IoL-Ki-fam" id="wmv-oC-vOq">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LZC-jO-brR" id="zFX-xM-mnb">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fca-gq-MZn">
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" text="Description" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H0f-08-eaF">
+                                            <rect key="frame" x="15" y="12" width="83" height="20"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="K30-0d-X5N">
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WCq-IQ-RA1">
+                                            <rect key="frame" x="245" y="12" width="42" height="20"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="H0f-08-eaF" firstAttribute="top" secondItem="zFX-xM-mnb" secondAttribute="top" constant="12" id="DmC-Gk-iI9"/>
+                                        <constraint firstItem="WCq-IQ-RA1" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="H0f-08-eaF" secondAttribute="trailing" constant="1" id="IHP-0p-TG4"/>
+                                        <constraint firstAttribute="bottom" secondItem="WCq-IQ-RA1" secondAttribute="bottom" constant="11" id="INH-KJ-KrI"/>
+                                        <constraint firstItem="WCq-IQ-RA1" firstAttribute="top" secondItem="zFX-xM-mnb" secondAttribute="top" constant="12" id="L1n-fL-1i2"/>
+                                        <constraint firstAttribute="trailing" secondItem="WCq-IQ-RA1" secondAttribute="trailing" id="SB5-1u-CHM"/>
+                                        <constraint firstAttribute="bottom" secondItem="H0f-08-eaF" secondAttribute="bottom" constant="11" id="We1-Ud-kDB"/>
+                                        <constraint firstItem="H0f-08-eaF" firstAttribute="leading" secondItem="zFX-xM-mnb" secondAttribute="leading" constant="15" id="iZF-99-9jz"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="4eo-eH-MDa" kind="push" identifier="MoreInfo" id="aXq-Y4-KyP"/>
+                                    <outlet property="leftLabel" destination="H0f-08-eaF" id="qlr-dy-4dZ"/>
+                                    <outlet property="rightDetailLabel" destination="WCq-IQ-RA1" id="9sz-Vc-wHb"/>
+                                    <segue destination="4eo-eH-MDa" kind="push" identifier="MoreInfo" id="off-yt-H5u"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -910,48 +922,38 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SelectedCell" id="c8P-ap-GkC" customClass="SelectedCategoryCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SelectedCell" id="c8P-ap-GkC" customClass="CustomRightDetailLabel">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="c8P-ap-GkC" id="x2k-Nr-jZs">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" text="descriptionExpense" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WDI-1N-8eL">
-                                            <rect key="frame" x="15" y="4" width="144" height="20"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" text="Description" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WDI-1N-8eL">
+                                            <rect key="frame" x="15" y="12" width="83" height="20"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" text="Date" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jGb-u9-8Qt">
-                                            <rect key="frame" x="266" y="4" width="34" height="20"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jGb-u9-8Qt">
+                                            <rect key="frame" x="245" y="12" width="42" height="20"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" text="Amount" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jN8-UA-sp2">
-                                            <rect key="frame" x="15" y="24" width="57" height="19"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="jGb-u9-8Qt" secondAttribute="bottom" constant="19" id="3Db-N0-WlW"/>
-                                        <constraint firstAttribute="trailing" secondItem="jGb-u9-8Qt" secondAttribute="trailing" constant="20" symbolic="YES" id="3H6-m0-fX0"/>
-                                        <constraint firstItem="jGb-u9-8Qt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="jN8-UA-sp2" secondAttribute="trailing" id="3Vq-Kf-0uh"/>
+                                        <constraint firstAttribute="bottom" secondItem="WDI-1N-8eL" secondAttribute="bottom" constant="11" id="0yj-5W-bs5"/>
+                                        <constraint firstAttribute="bottom" secondItem="jGb-u9-8Qt" secondAttribute="bottom" constant="11" id="306-uJ-3Ue"/>
+                                        <constraint firstAttribute="trailing" secondItem="jGb-u9-8Qt" secondAttribute="trailing" id="3H6-m0-fX0"/>
                                         <constraint firstItem="WDI-1N-8eL" firstAttribute="leading" secondItem="x2k-Nr-jZs" secondAttribute="leading" constant="15" id="40E-qh-lbt"/>
-                                        <constraint firstItem="jN8-UA-sp2" firstAttribute="top" secondItem="WDI-1N-8eL" secondAttribute="bottom" id="5Vj-hj-p9D"/>
-                                        <constraint firstAttribute="bottom" secondItem="jN8-UA-sp2" secondAttribute="bottom" id="LhM-0o-9LF"/>
+                                        <constraint firstItem="jGb-u9-8Qt" firstAttribute="top" secondItem="x2k-Nr-jZs" secondAttribute="top" constant="12" id="6tz-PT-Su3"/>
                                         <constraint firstItem="jGb-u9-8Qt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="WDI-1N-8eL" secondAttribute="trailing" id="O2t-6I-kZ6"/>
-                                        <constraint firstItem="jGb-u9-8Qt" firstAttribute="top" secondItem="x2k-Nr-jZs" secondAttribute="top" constant="4" id="Pw3-6r-yoU"/>
-                                        <constraint firstItem="jN8-UA-sp2" firstAttribute="leading" secondItem="x2k-Nr-jZs" secondAttribute="leading" constant="15" id="diN-QQ-pho"/>
-                                        <constraint firstItem="WDI-1N-8eL" firstAttribute="top" secondItem="x2k-Nr-jZs" secondAttribute="top" constant="4" id="urs-jj-0a7"/>
+                                        <constraint firstItem="WDI-1N-8eL" firstAttribute="top" secondItem="x2k-Nr-jZs" secondAttribute="top" constant="12" id="bc2-je-oWJ"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="leftLabel" destination="WDI-1N-8eL" id="fUk-cV-158"/>
                                     <outlet property="rightDetailLabel" destination="jGb-u9-8Qt" id="bSg-3a-0ew"/>
-                                    <outlet property="subtitleLabel" destination="jN8-UA-sp2" id="O52-bf-lbK"/>
                                     <segue destination="4eo-eH-MDa" kind="push" identifier="MoreInfo" id="tqp-JB-Yta"/>
                                 </connections>
                             </tableViewCell>
@@ -1003,7 +1005,7 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="lzb-VO-Adi"/>
-        <segue reference="tqp-JB-Yta"/>
+        <segue reference="off-yt-H5u"/>
         <segue reference="hGy-jW-v8B"/>
     </inferredMetricsTieBreakers>
 </document>
